# dither

./: .gitignore  .gitlab-ci.yml  Cargo.toml  bit_depth=4  cga.plt  crayon.plt  readme.md
src/: cga.rs  dither.rs  ditherer.rs  ditherers.rs  error.rs  img.rs  lib.rs  main.rs  opts.rs  prelude.rs  rgb.rs  tests.rs
src/color/: cga.rs  hex.rs  mod.rs  palette.rs  rgb.rs
src/color/palette/: mod.rs  tests.rs
