[package]
name = "dither"
version = "1.3.2"
authors = ["Efron Licht <efron.python@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A ditherer for static images with a variety of color palettes"
repository= "https://gitlab.com/efronlicht/dither"
readme = "readme.md"
[dependencies]
structopt = "0.2"
image = "0.21.0"

[dev-dependencies]
