[package]
name = "dither"
version = "1.3.10"

authors = ["Efron Licht <efron.python@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A ditherer for static images with a variety of color palettes"
repository = "https://gitlab.com/efronlicht/dither"
readme = "readme.md"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
image = "0.25.5"
